[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/light.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/George_bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/pngwing.com.png" type="Texture" id=3]
[ext_resource path="res://src/Objects/Flamethrower.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Flame.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Objects/Flame.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.69795

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Bullet_Anim",
"speed": 3.0
} ]

[node name="Fireball" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( 0.0446869, -0.643836 )
rotation = 1.5708
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Bullet_Animation" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.980392, 1, 0.419608, 1 )
position = Vector2( -4, -22 )
frames = SubResource( 5 )
animation = "Bullet_Anim"

[node name="Flamethrower" parent="." instance=ExtResource( 4 )]

[node name="Flame" parent="." instance=ExtResource( 5 )]
visible = false
script = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entereds"]
[connection signal="frame_changed" from="Bullet_Animation" to="." method="_on_Bullet_Animation_frame_changed"]
